[project]
name = "interferencefringedenoising"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.13.0",
    "matplotlib>=3.10.9",
    "numpy",
    "opencv-python",
    "opencv-python-headless>=4.13.0.92",
    "pillow",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

[tool.uv]
# 为 torch 系列包指定 CPU-only 源，避免下载 CUDA 版本

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
